# fire-retirement-tracker

./: .env.example  .gitignore  README.md  app.py  auth.py  config.py  db.py  engine.py  models.py  requirements.txt  schema.sql
.claude/: settings.local.json
.streamlit/: config.toml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  dependencies.py  exceptions.py  main.py  rate_limit.py
backend/app/core/: constants.py  engine.py  formatting.py  models.py
backend/app/routers/: expenses.py  export.py  fire_inputs.py  gold.py  income.py  kite.py  ledger_contacts.py  ledger_txns.py  precious_metals.py  project_expenses.py  projections.py  projects.py  sip_log.py
backend/app/services/: audit_svc.py  expenses_svc.py  export_svc.py  fire_inputs_svc.py  gold_svc.py  income_svc.py  kite_svc.py  ledger_contacts_svc.py  ledger_txns_svc.py  precious_metals_svc.py  project_expenses_svc.py  projects_svc.py  sip_log_svc.py  supabase_client.py
backend/tests/excel_verification/: conftest.py  test_01_inputs.py  test_02_fund_allocation.py  test_03_growth_projection.py  test_04_retirement_income.py
backend/tests/unit/: test_api_health.py  test_engine_edge_cases.py  test_expense_auto_calc.py  test_formatting.py  test_models_validation.py  test_precious_metals_svc.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
migrations/: 005_expense_month_year.sql  006_payment_method.sql  007_gold_portfolio.sql  008_expense_category.sql  008_precious_metals.sql  009_projects.sql  (+3 more)
(+123 files in other folders)
